Do zrobienia Save

--- a/wersja bez zmin grafiki/Gra_Dla_Taty-d135a1746c01ce04391fd6a279cde32d112228d5/Project1/Project1/FightWindow.resx
+++ b/wersja bez zmin grafiki/Gra_Dla_Taty-d135a1746c01ce04391fd6a279cde32d112228d5/Project1/Project1/FightWindow.resx
@@ -4288,4 +4288,13 @@
         Kgt2a0423PPCi5xjP1rotY6o6n//2Q==
 </value>
   </data>
+  <metadata name="toolTipOponent.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>315, 17</value>
+  </metadata>
+  <metadata name="toolTipOponent.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>315, 17</value>
+  </metadata>
+  <metadata name="toolTipPlayer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>507, 17</value>
+  </metadata>
 </root>
